tests/fixtures/go/invalid/syntax-error/syntax-error.go
package main

import "fmt"

func main() {
	var x int = 42
	fmt.Println(x
	// Missing closing parenthesis - syntax error
}